--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,21 +8,36 @@ edition = "2021"
 
 [dependencies]
 
-my-azure-storage-sdk = { branch = "0.3.2", git = "https://github.com/MyJetTools/my-azure-storage.git" }
-flurl = { branch = "0.2.1", git = "https://github.com/MyJetTools/fl-url" }
+my-http-server = { tag = "0.7.1", git = "https://github.com/MyJetTools/my-http-server.git", features = [
+    "macros",
+    "controllers",
+    "static-files",
+] }
 
+my-no-sql-sdk = { tag = "0.3.2", git = "https://github.com/MyJetTools/my-no-sql-sdk.git", features = [
+    "master-node",
+    "tcp-contracts",
+] }
 
-rust-extensions = { branch = "0.1.1", git = "https://github.com/MyJetTools/rust-extensions.git" }
-my-telemetry = { branch = "0.2.1", git = "https://github.com/MyJetTools/my-telemetry.git" }
-my-http-server = { branch = "0.2.6", git = "https://github.com/MyJetTools/my-http-server.git" }
-my-http-server-controllers = { branch = "0.2.6", git = "https://github.com/MyJetTools/my-http-server-controllers.git" }
-my-http-server-swagger = { branch = "0.2.6", git = "https://github.com/MyJetTools/my-http-server-swagger.git" }
-my-logger = { branch = "0.1.2", git = "https://github.com/MyJetTools/my-logger.git" }
-my-json = { branch = "0.1.1", git = "https://github.com/MyJetTools/my-json.git" }
+my-azure-storage-sdk = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-azure-storage.git" }
 
-my-no-sql-core = { branch = "0.1.2", git = "https://github.com/MyJetTools/my-no-sql-core.git", features = [
-    "table_attributes",
-    "row_expiration_read_only",
+flurl = { tag = "0.5.3", git = "https://github.com/MyJetTools/fl-url" }
+
+my-sqlite = { tag = "0.1.1", git = "https://github.com/MyJetTools/my-sqlite.git", features = [
+    "macros",
+] }
+
+rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
+    "with-tokio",
+    "base64",
+] }
+
+my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git" }
+my-json = { tag = "0.2.4", git = "https://github.com/MyJetTools/my-json.git" }
+zip = "*"
+
+my-grpc-extensions = { tag = "0.6.2", git = "https://github.com/MyJetTools/my-grpc-extensions.git", features = [
+    "grpc-server",
 ] }
 
 
@@ -35,7 +50,6 @@ prost = "*"
 serde = { version = "*", features = ["derive"] }
 tokio-util = "*"
 futures = "*"
-chrono = "*"
 futures-util = { version = "*", default-features = false }
 futures-core = { version = "*", default-features = false }
 futures-channel = "*"
@@ -52,7 +66,7 @@ prometheus = "*"
 signal-hook = "*"
 async-trait = "*"
 tokio-stream = "*"
-
+prost-types = "*"
 
 [build-dependencies]
 tonic-build = { version = "*", features = ["prost"] }
